Changes navbar menu

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active d-block d-sm-none" aria-current="page" href="#chicken">Chicken</a>
+            <a class="nav-link active text-center" aria-current="page" href="#chicken">Chicken</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link d-block d-sm-none" aria-current="page" href="#beef">Beef</a>
+            <a class="nav-link text-center" aria-current="page" href="#beef">Beef</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link d-block d-sm-none" aria-current="page" href="#sushi">Sushi</a>
+            <a class="nav-link text-center" aria-current="page" href="#sushi">Sushi</a>
           </li>
         </ul>
       </div>
