changes id of column containers

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="col col-sm-12 col-md-6 col-lg-4">
         
         <div id="text">
-          <h2 class="text-center" id="chicken">Beef</h2>
+          <h2 class="text-center" id="beef">Beef</h2>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Aut rem dicta error quasi laboriosam vero id dolore dignissimos 
             praesentium ex nam, modi quisquam provident aliquid pariatur cum 
@@ -340,7 +340,7 @@
       <div class="col col-sm-12 col-md-12 col-lg-4">
         
         <div id="text">
-          <h2 class="text-center" id="chicken">Sushi</h2>
+          <h2 class="text-center" id="sushi">Sushi</h2>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Aut rem dicta error quasi laboriosam vero id dolore dignissimos 
             praesentium ex nam, modi quisquam provident aliquid pariatur cum 
